fix: 빌더-패턴 내용 수정

--- a/content/blog/pattern/빌더-패턴.md
+++ b/content/blog/pattern/빌더-패턴.md
@@ -61,7 +61,8 @@ public class NutritionFacts {
 > 점층적 생성자 패턴에서는 매개변수들이 유효한지를 생성자에서만 확인하면 일관성을 유지할 수 있었지만 자바빈즈의 심각한 단점은 객체 생성 후 세터 메서드를 통하여 값을 계속해서 변경할 수 있기 때문에 클래스를 불변으로 만들 수 없다.
 
 ### 3. <U>빌더 패턴</U>
-점층적 생성자 패턴과 자바빈즈 패턴의 장점만 취했다.
+점층적 생성자 패턴과 자바빈즈 패턴의 장점만 취했다.  
+빌더 패턴은 파이썬과 스칼라에 있는 명명된 선택적 매개변수를 흉내 낸 것이다.  
 
 ```java
 public class NutritionFacts { 
@@ -113,7 +114,7 @@ public class NutritionFacts {
 }
 ```
 > 빌더의 세터 메서드들은 빌더 자신을 반환하기 때문에 연쇄적 호출이 가능하다.  
-> 빌더 패턴은 파이썬과 스칼라에 있는 명명된 선택적 매개변수를 흉내 낸 것이다.  
+> 점층적 생성자 패턴의 안전성과 자바 빈즈 패턴의 가독성을 모두 충족하는 패턴이다.  
 > 아래는 빌더 클래스를 사용하는 클라이언트의 코드 이다.
 
 ```java
