feat: 프로필 추가 및 포스트 1차 작성

--- a/content/blog/java/생성자-대신-정적-팩터리-메서드를-고려하라.md
+++ b/content/blog/java/생성자-대신-정적-팩터리-메서드를-고려하라.md
@@ -3,9 +3,46 @@ title: 생성자 대신 정적 팩터리 메서드를 고려하라
 date: 2020-04-25 22:04:67
 category: java
 thumbnail: './images/java.png'
-draft: true
+draft: false
 ---
 
-![](./images/java.png)
+## 정적 팩토리 메소드의 장점
+### 1. 이름을 가질 수 있다.
+```java
+// valueOf 라는 메서드 명을 통해 반환되는 값을 유추할 수 있다. 
+Integer.valueOf(int a)
+```  
+> 생성자에 넘기는 매개변수와 생성자 자체만으로는 반환될 객체의 특성을 제대로 설명하지 못한다.  
+-> 정적 팩토리 메소드는 이름만 잘 지으면 반환될 객체의 특성을 표현할 수 있다.
+```java
+// 하나의 클래스는 시그니처가 같은 생성자를 여러개 만들 수 없다. 
+public Test(int a, int b){}
+public Test(int c, int d){} <- X
+
+Test.testAndresult(int a, int b)
+Test.testOrResult(int c, int d)
+```  
+> 하나의 클래스에 시그니처가 같은 생성자가 여러개 필요할 것 같으면,   
+> 생성자를 정적 팩토리 메서드로 바꾸고 각각의 차이를 잘 드러내는 이름을 지어주자.   
+
+### 2. 호출 될 때마다 인스턴스를 새로 생성하지 않아도 된다.
+> 작성중
+
+### 3. 반환 타입의 하위 타입 객체를 반환할 수 있는 능력이 있다.
+> 작성중
+
+### 4. 입력 매개 변수에 따라 매번 다른 클래스의 객체를 반환 할 수 있다.
+> 작성중
+
+### 5. 정적 팩토리 메서드를 작성하는 시점에는 반환할 객체의 클래스가 존재 하지 않아도 된다.
+> 작성중
+
+
+## 정적 팩토리 메소드의 단점
+### 1. 상속을 하려면 public이나 protected 생 성자가 필요하니 정적 팩터리 메서드만 제공하면 하위 클래스를 만들 수 없다.
+> 작성중
+
+### 2. 정적 팩터리 메서드는 프로그래머가 찾기 어렵다.
+> 작성중
 
 
